<resources>
    <string name="app_name">ACMEMarket_client</string>
    <string name="title_activity_register_activity">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="already_have_an_account">Already have an account? Tap here</string>
    <string name="dont_have_an_account">Don\'t have an account? Tap here</string>
    <string name="action_register_short">Register</string>
    <string name="main_button_scan">Scan QR Code</string>
    <string name="main_button_history">History</string>
    <string name="main_button_cart">Your Cart</string>
    <string name="main_button_checkout">Checkout</string>
    <string name="card_info">Credit Card Number</string>
    <string name="invalid_email">Invalid e-mail address</string>
    <string name="register_field_empty">All fields are mandatory</string>
    <string name="key_generator_error">An expected error ocurred generating your certificate</string>
    <string name="switch_vouchers">Use an available voucher?</string>
    <string name="switch_balance">Use available balance?</string>
    <string name="history_total">Total: </string>
    <string name="history_balance">Balance used: </string>
    <string name="history_vouchers">Vouchers used? </string>
    <string name="cart_full">You can only have 10 items in your cart</string>
    <string name="no_scanner">No Scanner Found</string>
    <string name="download_scanner">Download a scanner code activity?</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_ok">ACK</string>
    <string name="error_generate_QR">There was a problem generating your QRCode</string>
    <string name="title_activity_login_activity">Login</string>
    <string name="checkout">Checkout</string>
    <string name="use_balance">Use available balance?</string>
    <string name="use_vouchers">Use available vouchers? (</string>
    <string name="auth_fail">Authentication failed</string>
    <string name="auth_error">Authentication error:</string>
    <string name="local_login">Biometric login</string>
    <string name="local_login_sub">Log in using your biometric credential</string>
</resources>
