<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout xmlns:android= "http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    tools:context=".cart.CartActivity">
    >

        <LinearLayout
            android:id="@+id/cartVouchers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/voucherLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_vouchers" />

            <Switch
                android:id="@+id/voucherSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cartBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/balanceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_balance" />

            <Switch
                android:id="@+id/balanceSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_item_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9"
        tools:listitem="@layout/recycle_cart_item" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

    <Button
        android:id="@+id/buttonCheckout"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_weight="1"
        android:minHeight="64dp"
        android:onClick="onCheckoutButtonClick"
        android:text="@string/main_button_checkout" />

    </LinearLayout>